Removed old /etc/default/tomcat6 settings, as they're now inserted into setenv.sh